[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-chain-spec = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-babe-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-beefy = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-beefy-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-epochs = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus-grandpa-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-sync-state-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
mmr-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
pallet-transaction-payment-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
substrate-state-trie-migration-rpc = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
