[package]
name = "polkadot-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
frame-benchmarking-cli = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
pallet-transaction-payment = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
frame-system = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
frame-system-rpc-runtime-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }

sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-storage = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-keyring = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-session = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-authority-discovery = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus-beefy = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus-grandpa = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-transaction-pool = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-mmr-primitives = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }

sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-executor = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-client-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-service = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
