[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-core = { git = "https://github.com/octopus-network/substrate", features = ["std"] , branch = "polkadot-v0.9.40-rc" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
