[package]
name = "polkadot-statement-distribution"
description = "Statement Distribution Subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
polkadot-node-subsystem = {path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.9.1"
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-authority-discovery = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-keyring = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-application-crypto = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-tracing = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-keystore = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-network = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
futures-timer = "3.0.2"
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
