[package]
name = "polkadot-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-service = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-block-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sc-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-blockchain = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-inherents = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-api = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-timestamp = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
sp-state-machine = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }
futures = "0.3.21"

[features]
runtime-benchmarks=["polkadot-test-runtime/runtime-benchmarks"]
