[package]
name = "test-parachain-adder"
description = "Test parachain which adds to a number as its state transition"
build = "build.rs"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
parachain = { package = "polkadot-parachain", path = "../../", default-features = false, features = [ "wasm-api" ] }
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
dlmalloc = { version = "0.2.4", features = [ "global" ] }

# We need to make sure the global allocator is disabled until we have support of full substrate externalities
sp-io = { git = "https://github.com/octopus-network/substrate", default-features = false, features = [ "disable_allocator" ] , branch = "polkadot-v0.9.40-rc" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.40-rc" }

[features]
default = [ "std" ]
std = [
	"parachain/std",
	"sp-std/std",
]
