[package]
name = "westend-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }
sp-weights = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }
sp-core = { git = "https://github.com/octopus-network/substrate", default-features = false , branch = "polkadot-v0.9.40-rc" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]
